--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,9 @@
 */bin/
 */obj/
 
-#Permite tudo dentro de packages onde quer que ela esteja
+#Permite tudo dentro de packages onde quer que ela esteja(para dependencias)
 !*/packages/*
+
+#Ignora alguns defaults do visual studio
+/src/.vs/PreTrip/v14/.suo
+/src/.vs/config/applicationhost.config
