--- a/src/PreTrip.Model/App.config
+++ b/src/PreTrip.Model/App.config
@@ -5,19 +5,17 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 
+  <connectionStrings>
+    <add name="PreTripDB" connectionString="Server=localhost;Database=pretrip;Uid=root;Pwd=root;" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+
   <entityFramework>
     <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory, MySql.Data.Entity.EF6" />
-    <providers>
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+    <providers>  
+      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
     </providers>
-  </entityFramework>
+  </entityFramework>  
   
-  <system.data>
-    <DbProviderFactories>
-      <remove invariant="MySql.Data.MySqlClient" name="MySQL Data Provider" />
-      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
-    <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" /></DbProviderFactories>
-  </system.data>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -26,4 +24,5 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-<connectionStrings><add name="PreTripDB" connectionString="server=localhost;user id=root;password=aluno;database=pretrip" providerName="MySql.Data.MySqlClient" /></connectionStrings></configuration>
+
+</configuration>
