--- a/src/PreTrip.Model/PreTrip.Model.csproj
+++ b/src/PreTrip.Model/PreTrip.Model.csproj
@@ -38,16 +38,17 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+    <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.ConnectorNET.Data.6.8.3.2\lib\net45\MySql.Data.dll</HintPath>
       <Private>True</Private>
-      <HintPath>..\packages\MySql.Data.6.9.9\lib\net45\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <HintPath>..\packages\MySql.Data.Entity.6.9.9\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
+    <Reference Include="MySql.Data.Entity.EF6, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
+      <HintPath>..\packages\MySql.ConnectorNET.Entity.6.8.3.2\lib\net45\MySql.Data.Entity.EF6.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="MySql.Web, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
-      <Private>True</Private>
       <HintPath>..\packages\MySql.Web.6.9.9\lib\net45\MySql.Web.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -61,20 +62,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="contas.cs" />
-    <Compile Include="empresas.cs" />
-    <Compile Include="enderecos.cs" />
-    <Compile Include="eventos.cs" />
-    <Compile Include="pedidos.cs" />
-    <Compile Include="pessoas.cs" />
-    <Compile Include="PreTripDB.cs" />
+    <Compile Include="Classes\Conta.cs" />
+    <Compile Include="Classes\Empresa.cs" />
+    <Compile Include="Classes\Endereco.cs" />
+    <Compile Include="Classes\Evento.cs" />
+    <Compile Include="Classes\Pedido.cs" />
+    <Compile Include="Classes\Pessoa.cs" />
+    <Compile Include="Classes\Usuario.cs" />
+    <Compile Include="Classes\Veiculo.cs" />
+    <Compile Include="Classes\Viagem.cs" />
+    <Compile Include="Context\PreTripDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="usuarios.cs" />
-    <Compile Include="veiculos.cs" />
-    <Compile Include="viagens.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
