--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -134,6 +134,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\UsuarioService.cs" />
     <Compile Include="Utils\CreateMD5.cs" />
     <Compile Include="Utils\CreatePass.cs" />
   </ItemGroup>
