--- a/src/PreTrip.Test/PreTrip.Test.csproj
+++ b/src/PreTrip.Test/PreTrip.Test.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\PreTrip.Lib\PreTrip.Lib.csproj">
+      <Project>{e6684884-6463-4cc4-bbaa-25e66ce2d496}</Project>
+      <Name>PreTrip.Lib</Name>
+    </ProjectReference>
     <ProjectReference Include="..\PreTrip.Model\PreTrip.Model.csproj">
       <Project>{a8446d23-95e8-4411-a699-5b0ad1b6db6f}</Project>
       <Name>PreTrip.Model</Name>
