--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -136,6 +136,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ViagemService.cs" />
     <Compile Include="Services\UsuarioService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -178,6 +179,9 @@
     <Content Include="Views\Administrativo\Administrativo.cshtml" />
     <Content Include="Views\Shared\Cadastro\_CadastroUsuarioPartialView.cshtml" />
     <Content Include="Views\Usuario\Index.cshtml" />
+    <Content Include="Views\Shared\Administrativo\_AdministrativoBefore.cshtml" />
+    <Content Include="Views\Shared\Administrativo\_AdministrativoAfter.cshtml" />
+    <Content Include="Views\Administrativo\Viagens.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
