--- a/src/PreTrip.Lib/PreTrip.Lib.csproj
+++ b/src/PreTrip.Lib/PreTrip.Lib.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\CreateMD5.cs" />
     <Compile Include="Utils\CreatePass.cs" />
+    <Compile Include="Utils\ValidationsUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
