Refatorado controllers e views

--- a/src/PreTrip.Model/App.config
+++ b/src/PreTrip.Model/App.config
@@ -22,7 +22,7 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="PreTripDB" connectionString="Persist Security Info=False;server=localhost;port=3306;database=pretrip;uid=root;pwd=root;" providerName="MySql.Data.MySqlClient" />
+    <add name="PreTripDB" connectionString="Persist Security Info=False;server=localhost;port=3306;database=pretrip;uid=root;pwd=aluno;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
