--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -127,18 +127,16 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\AdministrativoController.cs" />
-    <Compile Include="Controllers\CadastroController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\UsuarioController.cs" />
+    <Compile Include="Controllers\Adminstrativo\AdministrativoController.cs" />
+    <Compile Include="Controllers\Home\HomeController.cs" />
+    <Compile Include="Controllers\Usuario\UsuarioController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\EmpresaService.cs" />
-    <Compile Include="Services\ViagemService.cs" />
-    <Compile Include="Services\UsuarioService.cs" />
+    <Compile Include="Services\Empresas\EmpresasService.cs" />
+    <Compile Include="Services\Viagens\ViagensService.cs" />
+    <Compile Include="Services\Usuarios\UsuariosService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -171,11 +169,8 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Home\Cadastro.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Administrativo\Administrativo.cshtml" />
     <Content Include="Views\Shared\Cadastro\_CadastroUsuarioPartialView.cshtml" />
@@ -185,9 +180,11 @@
     <Content Include="Views\Administrativo\Viagens.cshtml" />
     <Content Include="Views\Administrativo\CadastrarEmpresa.cshtml" />
     <Content Include="Views\Shared\Cadastro\_CadastroEmpresaPartialView.cshtml" />
+    <Content Include="Views\Home\Cadastrar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Controllers\Viagem\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
