--- a/src/PreTrip/Web.config
+++ b/src/PreTrip/Web.config
@@ -56,6 +56,6 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="PreTripDB" connectionString="Persist Security Info=False;server=localhost;port=3306;database=pretrip;uid=root;pwd=root;" providerName="MySql.Data.MySqlClient" />
+    <add name="PreTripDB" connectionString="Persist Security Info=False;server=localhost;port=3306;database=pretrip;uid=root;pwd=aluno;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
 </configuration>
