--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -129,7 +129,8 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\Adminstrativo\AdministrativoController.cs" />
     <Compile Include="Controllers\Home\HomeController.cs" />
-    <Compile Include="Controllers\Usuario\UsuarioController.cs" />
+    <Compile Include="Controllers\Usuarios\UsuariosController.cs" />
+    <Compile Include="Controllers\Viagens\ViagensController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -175,7 +176,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Administrativo\Administrativo.cshtml" />
     <Content Include="Views\Shared\Cadastro\_CadastroUsuarioPartialView.cshtml" />
-    <Content Include="Views\Usuario\Index.cshtml" />
+    <Content Include="Views\Usuarios\Index.cshtml" />
     <Content Include="Views\Shared\Administrativo\_AdministrativoBefore.cshtml" />
     <Content Include="Views\Shared\Administrativo\_AdministrativoAfter.cshtml" />
     <Content Include="Views\Administrativo\Viagens.cshtml" />
@@ -185,11 +186,12 @@
     <Content Include="Views\Shared\Validacao\_ValidacaoBasica.cshtml" />
     <Content Include="Views\Shared\Usuario\_UsuarioBeforePartialView.cshtml" />
     <Content Include="Views\Shared\Usuario\_UsuarioAfterPartialView.cshtml" />
-    <Content Include="Views\Usuario\CadastroEmpresa.cshtml" />
+    <Content Include="Views\Usuarios\CadastroEmpresa.cshtml" />
+    <Content Include="Views\Viagens\Cadastrar.cshtml" />
+    <Content Include="Views\Viagens\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\Viagem\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
