--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -186,6 +186,7 @@
     <Content Include="Views\Shared\Usuario\_UsuarioBeforePartialView.cshtml" />
     <Content Include="Views\Shared\Usuario\_UsuarioAfterPartialView.cshtml" />
     <Content Include="Views\Usuario\CadastroEmpresa.cshtml" />
+    <Content Include="Views\Usuario\VisualizarEmpresas.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
