Exibição das viagens melhorada

--- a/src/PreTrip.Model/PreTrip.Model.csproj
+++ b/src/PreTrip.Model/PreTrip.Model.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Busca.cs" />
     <Compile Include="Classes\Conta.cs" />
     <Compile Include="Classes\Empresa.cs" />
     <Compile Include="Classes\Endereco.cs" />
