--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -177,13 +177,11 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Administrativo\Administrativo.cshtml" />
-    <Content Include="Views\Shared\Cadastro\_CadastroUsuarioPartialView.cshtml" />
     <Content Include="Views\Usuario\Index.cshtml" />
     <Content Include="Views\Shared\Administrativo\_AdministrativoBefore.cshtml" />
     <Content Include="Views\Shared\Administrativo\_AdministrativoAfter.cshtml" />
     <Content Include="Views\Administrativo\Viagens.cshtml" />
     <Content Include="Views\Administrativo\CadastrarEmpresa.cshtml" />
-    <Content Include="Views\Shared\Cadastro\_CadastroEmpresaPartialView.cshtml" />
     <Content Include="Views\Home\Cadastrar.cshtml" />
     <Content Include="Views\Shared\Validacao\_ValidacaoBasica.cshtml" />
     <Content Include="Views\Shared\Usuario\_UsuarioBeforePartialView.cshtml" />
@@ -192,10 +190,14 @@
     <Content Include="Views\Usuario\CadastroEmpresa.cshtml" />
     <Content Include="Views\Viagem\Cadastrar.cshtml" />
     <Content Include="Views\Viagem\Index.cshtml" />
+    <Content Include="Views\Usuario\AlterarUsuario.cshtml" />
+    <Content Include="Views\Shared\Cadastro\_CadastroEmpresaPartialView.cshtml" />
+    <Content Include="Views\Shared\Cadastro\_CadastroUsuarioPartialView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Shared\Administrativo\Cadastro\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
