Navbar diferentes para usuário logado ou não

--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -193,6 +193,8 @@
     <Content Include="Views\Shared\Cadastro\_CadastroEmpresaPartialView.cshtml" />
     <Content Include="Views\Shared\Cadastro\_CadastroUsuarioPartialView.cshtml" />
     <Content Include="Views\Viagem\Index.cshtml" />
+    <Content Include="Views\Shared\Navbar\_PartialDefault.cshtml" />
+    <Content Include="Views\Shared\Navbar\_PartialUsuarioLogado.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
