--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -199,6 +199,7 @@
     <Content Include="Views\Viagem\Visualizar.cshtml" />
     <Content Include="Views\Usuario\Interesses.cshtml" />
     <Content Include="Views\Usuario\HistoricoPesquisa.cshtml" />
+    <Content Include="Views\Usuario\CadastrarEndereco.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
