Finalizado acao de cadastrar endereco

--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Autenticacao\AutenticacaoService.cs" />
     <Compile Include="Services\Empresas\EmpresasService.cs" />
+    <Compile Include="Services\Enderecos\EnderecosService.cs" />
     <Compile Include="Services\Viagens\ViagensService.cs" />
     <Compile Include="Services\Usuarios\UsuariosService.cs" />
     <Compile Include="Session\PreTripSession.cs" />
