--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\Usuario\Interesses.cshtml" />
     <Content Include="Views\Usuario\HistoricoPesquisa.cshtml" />
     <Content Include="Views\Usuario\CadastrarEndereco.cshtml" />
+    <Content Include="Views\Usuario\MeuCarrinho.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
