--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -137,6 +137,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Autenticacao\AutenticacaoService.cs" />
+    <Compile Include="Services\Cidades\CidadesService.cs" />
     <Compile Include="Services\Empresas\EmpresasService.cs" />
     <Compile Include="Services\Enderecos\EnderecosService.cs" />
     <Compile Include="Services\Viagens\ViagensService.cs" />
@@ -204,6 +205,7 @@
     <Content Include="Views\Usuario\HistoricoPesquisa.cshtml" />
     <Content Include="Views\Usuario\CadastrarEndereco.cshtml" />
     <Content Include="Views\Usuario\MeuCarrinho.cshtml" />
+    <Content Include="Views\Usuario\CadastroInteresses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
