--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Services\Cidades\CidadesService.cs" />
     <Compile Include="Services\Empresas\EmpresasService.cs" />
     <Compile Include="Services\Enderecos\EnderecosService.cs" />
+    <Compile Include="Services\Interesse\InteresseService.cs" />
     <Compile Include="Services\Viagens\ViagensService.cs" />
     <Compile Include="Services\Usuarios\UsuariosService.cs" />
     <Compile Include="Session\PreTripSession.cs" />
