--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Services\Usuarios\UsuariosService.cs" />
     <Compile Include="Session\PreTripSession.cs" />
     <Compile Include="ViewModel\CarrinhoViewModel.cs" />
+    <Compile Include="ViewModel\CompraViewModel.cs" />
     <Compile Include="ViewModel\EnderecosViewModel.cs" />
     <Compile Include="ViewModel\HomeViewModel.cs" />
     <Compile Include="ViewModel\UsuariosViewModel.cs" />
@@ -212,6 +213,7 @@
     <Content Include="Views\Usuario\ConfirmarCompra.cshtml" />
     <Content Include="Views\Usuario\CadastrarContaBancaria.cshtml" />
     <Content Include="Views\Usuario\MeuCarrinho.cshtml" />
+    <Content Include="Views\Usuario\Viagens.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
