--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -214,6 +214,7 @@
     <Content Include="Views\Usuario\MeuCarrinho.cshtml" />
     <Content Include="Views\Usuario\Viagens.cshtml" />
     <Content Include="Views\Usuario\Pedidos.cshtml" />
+    <Content Include="Views\Usuario\AdicionarSaldo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
