--- a/src/PreTrip/PreTrip.csproj
+++ b/src/PreTrip/PreTrip.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Services\Empresas\EmpresasService.cs" />
     <Compile Include="Services\Enderecos\EnderecosService.cs" />
     <Compile Include="Services\Interesse\InteresseService.cs" />
+    <Compile Include="Services\Pedidos\PedidosService.cs" />
     <Compile Include="Services\Viagens\ViagensService.cs" />
     <Compile Include="Services\Usuarios\UsuariosService.cs" />
     <Compile Include="Session\PreTripSession.cs" />
