--- a/src/PreTrip.Model/PreTrip.Model.csproj
+++ b/src/PreTrip.Model/PreTrip.Model.csproj
@@ -80,6 +80,7 @@
       <Name>PreTrip.Lib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
