--- a/src/PreTrip/Web.config
+++ b/src/PreTrip/Web.config
@@ -3,7 +3,11 @@
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="PreTrip.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+                                                                                                                      </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -58,4 +62,11 @@
   <connectionStrings>
     <add name="PreTripDB" connectionString="Persist Security Info=False;server=localhost;port=3306;database=pretrip;uid=root;pwd=root;" providerName="MySql.Data.MySqlClient" />
   </connectionStrings>
+  <applicationSettings>
+    <PreTrip.Properties.Settings>
+      <setting name="PreTrip_CartaoService_Card" serializeAs="String">
+        <value>http://tadeuclasse.pe.hu/WSCartao/Server.php</value>
+      </setting>
+    </PreTrip.Properties.Settings>
+  </applicationSettings>
 </configuration>
